Better coloring